--- a/app/02/6.html
+++ b/app/02/6.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>函数传参</title>
+    <title>鼠标移入时间</title>
     <style>
         ul,
         li {
@@ -45,8 +45,16 @@
     <script>
 
         window.onload = function () {
-
-
+            var oUl = document.getElementById('imgList');
+            var aLi = oUl.getElementsByTagName('li');
+            for(var i = 0; i<aLi.length ;i++){
+                aLi[i].onmouseover = function(){
+                    this.className = 'current';
+                }
+                aLi[i].onmouseout = function(){
+                    this.className = '';
+                }
+            }
 
         }
     </script>
